# clang-tool-project

./: .#CMakePresets.json  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
ExternalClangTool/: CMakeLists.txt
ExternalClangTool/include/: ExternalClangTool.h
ExternalClangTool/lib/: ExternalClangTool.cpp
cmake/: CMakeLists.txt  SetupClangProject.cmake  SetupLLVMProject.cmake
lib/: CMakeLists.txt  ExternalClangTool.cpp
